public/scss/modules/_company.scss
@import '../_bootstrap-variables.scss';
@import '../_variables.scss';

.company-list {

    .company-list-item {
        margin-top: 4em;
        margin-bottom: 4em;
    }

    img.company-logo {
        margin: 2em auto;
    }
}

.job-list {
    .job-list-item {
        margin-top: 4em;
        margin-bottom: 4em;
    }

    img.company-logo {
        margin: 2em auto;
    }
}

.company-grid {
    .company-grid-item {
        border: 1px solid $card-border-color;
        border-radius: 5px;
        height: 17em;
        margin-bottom: 2em;
    }

    .company-grid-content {
        max-width: 20em;
        margin: 0 auto;
        position: relative;
        height: 15em;
    }

    img.company-logo {
        margin: 2em 0;
        max-height: 5em;
    }

    div.company-grid-text {
        position: absolute;
        bottom: 0;
        left: 0;
        right: 0;
        padding-left: 1em;
    }

    @media (min-width: $screen-sm-min) {
        img.company-logo {
            margin: 2em auto;
        }
    }

}

.card-grid {
    display: grid;
    column-gap: 2em;
    row-gap: 1em;
    grid-template-columns: repeat(1, 1fr);

    @media (min-width: $screen-sm-min) {
        & {
            row-gap: 2em;
            grid-template-columns: repeat(2, 1fr);
        }
    }

    @media (min-width: $screen-md-min) {
        & {
            grid-template-columns: repeat(3, 1fr);
        }
    }

    @media (min-width: $screen-lg-min) {
        & {
            grid-template-columns: repeat(4, 1fr);
        }
    }
}

.card {
    margin-top: 0;
    padding: 1em;
    border: 1px solid $card-border-color;
    box-shadow: none;
    display: flex;
    flex-direction: column;

    .card-img {
        margin: 0 0 1em;
        height: 3em;

        img {
            margin: 0;
            max-height: 100%;
            max-width: 100%;
            display: block;
        }

        @media (min-width: $screen-sm-min) {
            & {
                height: 5em;

                img {
                    margin: 0 auto;
                }
            }
        }
    }

    .card-title {
        margin: 0 0 0.75em;
        text-transform: none;
    }

    .card-subtitle {
        margin: -0.5em 0 0.75em;
        font-size: 1em;
    }

    p {
        line-height: normal;
    }

    .card-footer {
        margin: auto 0 0;
        padding: 1.5em 0 0;
        display: flex;
        flex-direction: row;
        align-items: center;
        justify-content: space-between;

        .btn-link {
            margin: 0;
            padding: 0;
        }
    }


    &.card-link {
        flex-direction: row;

        .card-footer {
            padding: 0 0 0 1.5em;
            margin: 0 0 0 auto;
        }
    }
}

a.card {
    color: inherit;

    &:hover, &:active, &:focus {
        background-color: $card-active-color;
        text-decoration: none;
    }

    &:hover .btn-link {
        color: $link-color-hover;
        text-decoration: underline;
    }
}

.filter-bar {
    padding: 0.5em 0;
    margin-bottom: 2em;
    background: $card-border-color;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;

    .form-group {
        margin: 0;
        padding: 0.5em 1em;
        display: flex;
        flex-direction: row;
        align-items: center;

        &:last-child {
            border-right: 0;
        }

        > label {
            margin-right: 0.5em;
        }
    }

    @media (min-width: $screen-sm-min) {
        & {
            padding: 0;
        }

        .form-group {
            padding: 1em;
        }
    }
}

#job-search, #job-label {
    width: auto;
    min-width: 100px;
    max-width: 250px;
}

#job-search {
    width: 250px;
}

dl.icon-list {
    dt {
        margin-right: 0.75em;
        float: left;
    }

    dt, dd {
        margin-bottom: 1em;

        &:last-child {
            margin-bottom: 0;
        }
    }
}

ul.details-list {
    list-style: none;
    margin: 0 0 2em;
    padding: 0;
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;

    li {
        margin: 0 0 0.2em;
    }

    @media (min-width: $screen-sm-min) {
        & {
            flex-direction: row;

            li {
                margin: 0;

                &:after {
                    content: "|";
                    padding: 0 0.5em;
                }

                &:last-child:after {
                    content: "";
                }
            }
        }
    }
}

.panel-company .panel-image {
    background: #FFF;
    margin: 0;
    height: 200px;
    border: 5px solid $card-active-color;

    img {
        margin: 0 auto;
        max-height: 100%;
        max-width: 100%;
        display: block;
    }
}

